objects/ServiceAppointment__x.object
<CustomObject>
    <externalDataSource>BMX_EXTERNAL</externalDataSource>
    <externalName>ServiceAppointment</externalName>
    <fields>
        <fullName>AccountId__c</fullName>
        <externalDeveloperName>AccountId</externalDeveloperName>
        <label>Account ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountName_c__c</fullName>
        <externalDeveloperName>AccountName__c</externalDeveloperName>
        <label>Account Name</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ActiveDefaultResource_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>ActiveDefaultResource__c</externalDeveloperName>
        <label>Default Service Resource Is Active</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ActualDuration__c</fullName>
        <externalDeveloperName>ActualDuration</externalDeveloperName>
        <label>Actual Duration (Minutes)</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActualEndTime__c</fullName>
        <externalDeveloperName>ActualEndTime</externalDeveloperName>
        <label>Actual End</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ActualStartTime__c</fullName>
        <externalDeveloperName>ActualStartTime</externalDeveloperName>
        <label>Actual Start</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <externalDeveloperName>Address</externalDeveloperName>
        <label>Address</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AppointmentNumber__c</fullName>
        <externalDeveloperName>AppointmentNumber</externalDeveloperName>
        <label>Appointment Number</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ArrivalWindowEndTime__c</fullName>
        <externalDeveloperName>ArrivalWindowEndTime</externalDeveloperName>
        <label>Arrival Window End</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ArrivalWindowStartTime__c</fullName>
        <externalDeveloperName>ArrivalWindowStartTime</externalDeveloperName>
        <label>Arrival Window Start</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AssetName_c__c</fullName>
        <externalDeveloperName>AssetName__c</externalDeveloperName>
        <label>Asset Name</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AssetSN_c__c</fullName>
        <externalDeveloperName>AssetSN__c</externalDeveloperName>
        <label>Asset Serial Number</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BusinessHoursId_c__c</fullName>
        <externalDeveloperName>BusinessHoursId__c</externalDeveloperName>
        <label>Business Hours</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <externalDeveloperName>City</externalDeveloperName>
        <label>City</label>
        <length>40</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed_over_Phone_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Completed_over_Phone__c</externalDeveloperName>
        <label>Fixed Remotely</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContactId__c</fullName>
        <externalDeveloperName>ContactId</externalDeveloperName>
        <label>Contact ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactName_c__c</fullName>
        <externalDeveloperName>ContactName__c</externalDeveloperName>
        <label>Appointment Contact</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactPhoneNumber_c__c</fullName>
        <externalDeveloperName>ContactPhoneNumber__c</externalDeveloperName>
        <label>Contact Phone Number</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CountryCode__c</fullName>
        <externalDeveloperName>CountryCode</externalDeveloperName>
        <label>Country Code</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AF</fullName>
                    <label>Afghanistan</label>
                </value>
                <value>
                    <fullName>AX</fullName>
                    <label>Aland Islands</label>
                </value>
                <value>
                    <fullName>AL</fullName>
                    <label>Albania</label>
                </value>
                <value>
                    <fullName>DZ</fullName>
                    <label>Algeria</label>
                </value>
                <value>
                    <fullName>AD</fullName>
                    <label>Andorra</label>
                </value>
                <value>
                    <fullName>AO</fullName>
                    <label>Angola</label>
                </value>
                <value>
                    <fullName>AI</fullName>
                    <label>Anguilla</label>
                </value>
                <value>
                    <fullName>AQ</fullName>
                    <label>Antarctica</label>
                </value>
                <value>
                    <fullName>AG</fullName>
                    <label>Antigua and Barbuda</label>
                </value>
                <value>
                    <fullName>AR</fullName>
                    <label>Argentina</label>
                </value>
                <value>
                    <fullName>AM</fullName>
                    <label>Armenia</label>
                </value>
                <value>
                    <fullName>AW</fullName>
                    <label>Aruba</label>
                </value>
                <value>
                    <fullName>AU</fullName>
                    <label>Australia</label>
                </value>
                <value>
                    <fullName>AT</fullName>
                    <label>Austria</label>
                </value>
                <value>
                    <fullName>AZ</fullName>
                    <label>Azerbaijan</label>
                </value>
                <value>
                    <fullName>BS</fullName>
                    <label>Bahamas</label>
                </value>
                <value>
                    <fullName>BH</fullName>
                    <label>Bahrain</label>
                </value>
                <value>
                    <fullName>BD</fullName>
                    <label>Bangladesh</label>
                </value>
                <value>
                    <fullName>BB</fullName>
                    <label>Barbados</label>
                </value>
                <value>
                    <fullName>BY</fullName>
                    <label>Belarus</label>
                </value>
                <value>
                    <fullName>BE</fullName>
                    <label>Belgium</label>
                </value>
                <value>
                    <fullName>BZ</fullName>
                    <label>Belize</label>
                </value>
                <value>
                    <fullName>BJ</fullName>
                    <label>Benin</label>
                </value>
                <value>
                    <fullName>BM</fullName>
                    <label>Bermuda</label>
                </value>
                <value>
                    <fullName>BT</fullName>
                    <label>Bhutan</label>
                </value>
                <value>
                    <fullName>BO</fullName>
                    <label>Bolivia, Plurinational State of</label>
                </value>
                <value>
                    <fullName>BQ</fullName>
                    <label>Bonaire, Sint Eustatius and Saba</label>
                </value>
                <value>
                    <fullName>BA</fullName>
                    <label>Bosnia and Herzegovina</label>
                </value>
                <value>
                    <fullName>BW</fullName>
                    <label>Botswana</label>
                </value>
                <value>
                    <fullName>BV</fullName>
                    <label>Bouvet Island</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <externalDeveloperName>Country</externalDeveloperName>
        <label>Country</label>
        <length>80</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <externalDeveloperName>CreatedById</externalDeveloperName>
        <label>Created By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <externalDeveloperName>CreatedDate</externalDeveloperName>
        <label>Created Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CurrentErrorCode_c__c</fullName>
        <externalDeveloperName>CurrentErrorCode__c</externalDeveloperName>
        <label>Current Error Code</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CurrentStatusDateTime_c__c</fullName>
        <externalDeveloperName>CurrentStatusDateTime__c</externalDeveloperName>
        <label>Current Status DateTime</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DefaultServiceResourceId_c__c</fullName>
        <externalDeveloperName>DefaultServiceResourceId__c</externalDeveloperName>
        <label>Default Service Resource Id</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <externalDeveloperName>Description</externalDeveloperName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DueDateEscalation_c__c</fullName>
        <externalDeveloperName>DueDateEscalation__c</externalDeveloperName>
        <label>Due date for escalation</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DueDate__c</fullName>
        <externalDeveloperName>DueDate</externalDeveloperName>
        <label>Due Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DurationInMinutes__c</fullName>
        <externalDeveloperName>DurationInMinutes</externalDeveloperName>
        <label>Duration in Minutes</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DurationType__c</fullName>
        <externalDeveloperName>DurationType</externalDeveloperName>
        <label>Duration Type</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hours</fullName>
                </value>
                <value>
                    <fullName>Minutes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <externalDeveloperName>Duration</externalDeveloperName>
        <label>Duration</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EarliestStartTime__c</fullName>
        <externalDeveloperName>EarliestStartTime</externalDeveloperName>
        <label>Earliest Start Permitted</label>
        <readOnlyProxy>true</readOnlyProxy>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ExpiredToolUsed_c__c</fullName>
        <externalDeveloperName>ExpiredToolUsed__c</externalDeveloperName>
        <label>Expired Tool Used?</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL_Appointment_Grade_c__c</fullName>
        <externalDeveloperName>FSL__Appointment_Grade__c</externalDeveloperName>
        <label>Appointment Grade</label>
        <precision>5</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL_Auto_Schedule_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>FSL__Auto_Schedule__c</externalDeveloperName>
        <label>Auto Schedule</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL_Duration_In_Minutes_c__c</fullName>
        <externalDeveloperName>FSL__Duration_In_Minutes__c</externalDeveloperName>
        <label>Duration In Minutes</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL_Emergency_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>FSL__Emergency__c</externalDeveloperName>
        <label>Emergency</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL_GanttColor_c__c</fullName>
        <externalDeveloperName>FSL__GanttColor__c</externalDeveloperName>
        <label>Gantt Color</label>
        <length>7</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL_GanttIcon_c__c</fullName>
        <externalDeveloperName>FSL__GanttIcon__c</externalDeveloperName>
        <inlineHelpText>Enter a URL for an icon. The URL must end in an image suffix, such as .png.</inlineHelpText>
        <label>Gantt Icon</label>
        <length>2048</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSL_GanttLabel_c__c</fullName>
        <externalDeveloperName>FSL__GanttLabel__c</externalDeveloperName>
        <label>Gantt Label</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL_Gantt_Display_Date_c__c</fullName>
        <externalDeveloperName>FSL__Gantt_Display_Date__c</externalDeveloperName>
        <label>Gantt Display Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FSL_InJeopardyReason_c__c</fullName>
        <externalDeveloperName>FSL__InJeopardyReason__c</externalDeveloperName>
        <label>In Jeopardy Reason</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Delayed Start</fullName>
                </value>
                <value>
                    <fullName>Delayed Finish</fullName>
                </value>
                <value>
                    <fullName>No Response</fullName>
                </value>
                <value>
                    <fullName>Due Date Approaching</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL_InJeopardy_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>FSL__InJeopardy__c</externalDeveloperName>
        <label>In Jeopardy</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL_InternalSLRGeolocation_Latitude_s__c</fullName>
        <externalDeveloperName>FSL__InternalSLRGeolocation__Latitude__s</externalDeveloperName>
        <label>Internal SLR Geolocation (Latitude)</label>
        <precision>9</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL_InternalSLRGeolocation_Longitude_s__c</fullName>
        <externalDeveloperName>FSL__InternalSLRGeolocation__Longitude__s</externalDeveloperName>
        <label>Internal SLR Geolocation (Longitude)</label>
        <precision>9</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL_IsFillInCandidate_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>FSL__IsFillInCandidate__c</externalDeveloperName>
        <label>Is Fill In Candidate</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL_IsMultiDay_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>FSL__IsMultiDay__c</externalDeveloperName>
        <label>Is MultiDay</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL_MDS_Calculated_length_c__c</fullName>
        <externalDeveloperName>FSL__MDS_Calculated_length__c</externalDeveloperName>
        <label>Multiday Work Calculated length</label>
        <precision>10</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL_MDT_Operational_Time_c__c</fullName>
        <externalDeveloperName>FSL__MDT_Operational_Time__c</externalDeveloperName>
        <label>Multiday Work Operational Time</label>
        <length>131072</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSL_Pinned_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>FSL__Pinned__c</externalDeveloperName>
        <label>Pinned</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL_Prevent_Geocoding_For_Chatter_Action__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>FSL__Prevent_Geocoding_For_Chatter_Actions__c</externalDeveloperName>
        <label>Prevent Geocoding For Chatter Actions</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL_Related_Service_c__c</fullName>
        <externalDeveloperName>FSL__Related_Service__c</externalDeveloperName>
        <label>Related Service</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL_Same_Day_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>FSL__Same_Day__c</externalDeveloperName>
        <label>Same Day</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL_Same_Resource_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>FSL__Same_Resource__c</externalDeveloperName>
        <label>Same Resource</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL_Schedule_Mode_c__c</fullName>
        <externalDeveloperName>FSL__Schedule_Mode__c</externalDeveloperName>
        <label>Schedule Mode</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Automatic</fullName>
                </value>
                <value>
                    <fullName>Optimization</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL_Schedule_over_lower_priority_appoint__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>FSL__Schedule_over_lower_priority_appointment__c</externalDeveloperName>
        <label>Schedule Over Lower Priority Appointment</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL_Scheduling_Policy_Used_c__c</fullName>
        <externalDeveloperName>FSL__Scheduling_Policy_Used__c</externalDeveloperName>
        <label>Scheduling Policy Used</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL_Time_Dependency_c__c</fullName>
        <externalDeveloperName>FSL__Time_Dependency__c</externalDeveloperName>
        <label>Time Dependency</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Same Start</fullName>
                </value>
                <value>
                    <fullName>Start After Finish</fullName>
                </value>
                <value>
                    <fullName>Finish Before Start</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL_UpdatedByOptimization_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>FSL__UpdatedByOptimization__c</externalDeveloperName>
        <label>UpdatedByOptimization</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL_Use_Async_Logic_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>FSL__Use_Async_Logic__c</externalDeveloperName>
        <label>Use Async Logic</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL_Virtual_Service_For_Chatter_Action_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>FSL__Virtual_Service_For_Chatter_Action__c</externalDeveloperName>
        <label>Virtual Service For Chatter Action (SLR)</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GeocodeAccuracy__c</fullName>
        <externalDeveloperName>GeocodeAccuracy</externalDeveloperName>
        <label>Geocode Accuracy</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Address</fullName>
                </value>
                <value>
                    <fullName>NearAddress</fullName>
                </value>
                <value>
                    <fullName>Block</fullName>
                </value>
                <value>
                    <fullName>Street</fullName>
                </value>
                <value>
                    <fullName>ExtendedZip</fullName>
                </value>
                <value>
                    <fullName>Zip</fullName>
                </value>
                <value>
                    <fullName>Neighborhood</fullName>
                </value>
                <value>
                    <fullName>City</fullName>
                </value>
                <value>
                    <fullName>County</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ISCreatedThroughMobileFlow_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>ISCreatedThroughMobileFlow__c</externalDeveloperName>
        <label>IS Created Through Mobile Flow</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ISTechSchedulingUpdated_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>ISTechSchedulingUpdated__c</externalDeveloperName>
        <label>ISTechSchedulingUpdated</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Info_c__c</fullName>
        <externalDeveloperName>Info__c</externalDeveloperName>
        <label>Info</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsDeleted</externalDeveloperName>
        <label>Deleted</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPlatinum_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsPlatinum__c</externalDeveloperName>
        <label>Platinum</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsShipmentConfirmed_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsShipmentConfirmed__c</externalDeveloperName>
        <label>Is Shipment Confirmed?</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastModifiedById__c</fullName>
        <externalDeveloperName>LastModifiedById</externalDeveloperName>
        <label>Last Modified By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <externalDeveloperName>LastModifiedDate</externalDeveloperName>
        <label>Last Modified Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastReferencedDate__c</fullName>
        <externalDeveloperName>LastReferencedDate</externalDeveloperName>
        <label>Last Referenced Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastViewedDate__c</fullName>
        <externalDeveloperName>LastViewedDate</externalDeveloperName>
        <label>Last Viewed Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <externalDeveloperName>Latitude</externalDeveloperName>
        <label>Latitude</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <externalDeveloperName>Longitude</externalDeveloperName>
        <label>Longitude</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MassUpdatedDate_c__c</fullName>
        <externalDeveloperName>MassUpdatedDate__c</externalDeveloperName>
        <label>Mass Updated Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>My_Territory_SA_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>My_Territory_SA__c</externalDeveloperName>
        <inlineHelpText>For Reporting Use Only: does the main work center on the parent work order = the department of the logged in user?</inlineHelpText>
        <label>My Territory? SA</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NbrOfAdditionalSAaccepted_c__c</fullName>
        <externalDeveloperName>NbrOfAdditionalSAaccepted__c</externalDeveloperName>
        <inlineHelpText>Nbr of service appointments that the FSE accept using the flow</inlineHelpText>
        <label>Nbr Of Additional SA accepted</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NoKitDestroyed_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>NoKitDestroyed__c</externalDeveloperName>
        <label>No Kit Destroyed ?</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NumberOfAssignedResources_c__c</fullName>
        <externalDeveloperName>NumberOfAssignedResources__c</externalDeveloperName>
        <label>Number of Assigned Resources</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfKitsDestroyed_c__c</fullName>
        <externalDeveloperName>NumberOfKitsDestroyed__c</externalDeveloperName>
        <label>Number of kits destroyed</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Optimization_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Optimization__c</externalDeveloperName>
        <inlineHelpText>Check whether the current Service Appointment is in the optimization scope (Field Action, or Upgrade/Update).</inlineHelpText>
        <label>Optimization scope?</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OutOfRecommendedPeriod_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>OutOfRecommendedPeriod__c</externalDeveloperName>
        <label>Out of Recommended Period?</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <externalDeveloperName>OwnerId</externalDeveloperName>
        <label>Owner ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO1_c__c</fullName>
        <externalDeveloperName>PO1__c</externalDeveloperName>
        <label># Service Appointment</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ParentRecordId__c</fullName>
        <externalDeveloperName>ParentRecordId</externalDeveloperName>
        <label>Parent Record ID</label>
        <length>18</length>
        <referenceTo>WorkOrder__x</referenceTo>
        <relationshipLabel>Service Appointments</relationshipLabel>
        <relationshipName>Service_Appointments1</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>ParentRecordStatusCategory__c</fullName>
        <externalDeveloperName>ParentRecordStatusCategory</externalDeveloperName>
        <label>Parent Record Status Category</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>InProgress</fullName>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>OnHold</fullName>
                    <label>On Hold</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>CannotComplete</fullName>
                    <label>Cannot Complete</label>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ParentRecordType__c</fullName>
        <externalDeveloperName>ParentRecordType</externalDeveloperName>
        <label>Parent Record Type</label>
        <length>50</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Record_Name_c__c</fullName>
        <externalDeveloperName>Parent_Record_Name__c</externalDeveloperName>
        <label>Parent Record Name</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <externalDeveloperName>PostalCode</externalDeveloperName>
        <label>Zip</label>
        <length>20</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
</CustomObject>